--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     </header>
     <div class="top">
       <div class="top-left">
-        <img class="logo" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/logo.png">
+        <img class="logo" src="image/logo.png">
       </div>
       <div class="top-right">
-        <img class="top-image" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/kirill-x_VOtnVJeGE-unsplash.jpg">
+        <img class="top-image" src="C:image/kirill-x_VOtnVJeGE-unsplash.jpg">
       </div>
     </div>
     <div class="consept">
       <div class="consept-left">
-        <img class="consept-image" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/jazmin-quaynor-8ioenvmof-I-unsplash.jpg">
+        <img class="consept-image" src="image/jazmin-quaynor-8ioenvmof-I-unsplash.jpg">
       </div>
       <div class="consept-right">
         <div class="details">
-          <img class="logo-mini" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/logo-mini.png" >
+          <img class="logo-mini" src="image/logo-mini.png" >
           <p class="txts">"日常に、輝きを"<br>GLOWでは、お客様のさらなる輝きをお手伝いさせていただきます。1人1人のお客様になりたいイメージをお聞きし、1人1人のスタッフが心を込めて寄り添えるサロンヘ。そんな想いで、より一層、努力を重ね精進してまいります。<br>
             スタッフー同、心よりお待ち申し上げております。</p>
         </div>
@@ -54,28 +54,28 @@
       <div class="staff-member">
         <div class="staff-boxes">
           <div class="staff-box">
-            <img class="staff-face" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/S__19423234.jpg">
+            <img class="staff-face" src="image/S__19423234.jpg">
             <div class="staff-details">
               <p class="txtm">Airi</p>
               <p class="txts">〇top stylist<br>お客様ひとりひとりに合った、毎日のスタイリングが楽しくなるようなスタイルを提案します！ご来店していただいたお客様がリラックスできるような空間を目指しています！</p>
             </div>
           </div>
           <div class="staff-box">
-            <img class="staff-face" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/staff2.jpg">
+            <img class="staff-face" src="image/staff2.jpg">
             <div class="staff-details">
               <p class="txtm">Fuka</p>
               <p class="txts">〇stylist<br>"ゆるくておしゃれ"なスタイルが得意です！職場や学校などでの好感度の高いスタイルはおまかせください！一緒に綺麗になりましょう！</p>
             </div>
           </div>
           <div class="staff-box">
-            <img class="staff-face" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/IMG_6138.JPG">
+            <img class="staff-face" src="image/IMG_6138.JPG">
             <div class="staff-details">
               <p class="txtm">Leeknow</p>
               <p class="txts">〇stylist<br>カラー全般得意です！ハイトーンカラーやダブルカラーなど様々なメニューをご用意しております！ご来店の際にぜひご相談ください。</p>
             </div>
           </div>
           <div class="staff-box">
-            <img class="staff-face" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/IMG_6791.JPG">
+            <img class="staff-face" src="image/IMG_6791.JPG">
             <div class="staff-details">
               <p class="txtm">Quokka</p>
               <p class="txts">〇assistant<br>まだまだ勉強中ですが、皆様に気持ちの良い時間を過ごしていただけるよう頑張ります！</p>
@@ -91,7 +91,7 @@
     </div>
     <div class="menu">
       <p class="txtl">MENU</p>
-      <img class="menu-image" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/menu7.jpg">
+      <img class="menu-image" src="image/menu7.jpg">
       <div class="menu-btn">
         <div class="btn-more">
             <a href="#">more >></a>
@@ -102,7 +102,7 @@
       <p class="txtl">NEWS</p>
       <div class="news-boxes">
         <div class="news-box">
-          <a href="#"><img src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/nordwood-themes-bIugCleCY84-unsplash.jpg">
+          <a href="#"><img src="image/nordwood-themes-bIugCleCY84-unsplash.jpg">
           <div class="news-details">
             <p class="txtm">オンライン限定クーポンご用意いたしました！</p>
             <p class="txtss">2021.3.25</p>
@@ -110,7 +110,7 @@
           </div></a>
         </div>
         <div class="news-box">
-          <a href="#"><img src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/sincerely-media-gA8iUoWYvTk-unsplash.jpg">
+          <a href="#"><img src="image/sincerely-media-gA8iUoWYvTk-unsplash.jpg">
           <div class="news-details">
             <p class="txtm">新型コロナウイルス感染症予防対策に関するお知らせ</p>
             <p class="txtss">2020.10.25</p>
@@ -118,7 +118,7 @@
           </div></a>
         </div>
         <div class="news-box">
-          <a href="#"><img src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/yiqun-tang-3asjZSd_NAw-unsplash.jpg">
+          <a href="#"><img src="image/yiqun-tang-3asjZSd_NAw-unsplash.jpg">
           <div class="news-details">
             <p class="txtm">GLOWが雑誌"mani"に掲載されました！</p>
             <p class="txtss">2020.9.14</p>
@@ -126,7 +126,7 @@
           </div></a>
         </div>
         <div class="news-box">
-          <a href="#"><img src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/gabrielle-henderson-1DMNn6gBbwQ-unsplash.jpg">
+          <a href="#"><img src="image/gabrielle-henderson-1DMNn6gBbwQ-unsplash.jpg">
           <div class="news-details">
             <p class="txtm">オリジナルヘアケア用品入荷いたしました！</p>
             <p class="txtss">2020.3.20</p>
@@ -138,9 +138,9 @@
     <div class="shop">
       <p class="txtl">SHOP</p>
       <div class="shop-box">
-        <img class="shop-image" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/andrew-spencer-t4VfOdbofRQ-unsplash.jpg">
+        <img class="shop-image" src="image/andrew-spencer-t4VfOdbofRQ-unsplash.jpg">
         <div class="shop-details">
-          <img class="logo-mini" src="C:/Users/miharu/Desktop/html_lesson/hairsalon/image/logo-mini.png">
+          <img class="logo-mini" src="image/logo-mini.png">
           <ul class="txts">
             <li>TEL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;01-2345-6789</li>
             <li>OPEN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10:00 - 21:00</li>
