--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img class="logo" src="image/logo.png">
       </div>
       <div class="top-right">
-        <img class="top-image" src="C:image/kirill-x_VOtnVJeGE-unsplash.jpg">
+        <img class="top-image" src="image/kirill-x_VOtnVJeGE-unsplash.jpg">
       </div>
     </div>
     <div class="consept">
