--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             </div>
           </div>
           <div class="staff-box">
-            <img class="staff-face" src="image/IMG_6138.JPG">
+            <img class="staff-face" src="profile1.jpg">
             <div class="staff-details">
-              <p class="txtm">Leeknow</p>
+              <p class="txtm">Miharu</p>
               <p class="txts">〇stylist<br>カラー全般得意です！ハイトーンカラーやダブルカラーなど様々なメニューをご用意しております！ご来店の際にぜひご相談ください。</p>
             </div>
           </div>
