--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
           </div>
           <div class="staff-box">
-            <img class="staff-face" src="profile1.jpg">
+            <img class="staff-face" src="image/profile1.jpg">
             <div class="staff-details">
               <p class="txtm">Miharu</p>
               <p class="txts">〇stylist<br>カラー全般得意です！ハイトーンカラーやダブルカラーなど様々なメニューをご用意しております！ご来店の際にぜひご相談ください。</p>
